Додано базову структуру index.html

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -1,10 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Fashion Trends - Головна</title>
+    <link rel="stylesheet" href="../../css/style.css"> <!-- Оновлений правильний шлях до CSS -->
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
+
+<!-- 🔹 Шапка сайту -->
+<header>
+    <div class="logo">Fashion Trends</div>
+    <nav>
+        <ul class="nav-links">
+            <li><a href="index.html">Головна</a></li>
+            <li><a href="about.html">Про нас</a></li>
+            <li><a href="articles.html">Статті</a></li>
+            <li><a href="gallery.html">Галерея</a></li>
+            <li><a href="contact.html">Контакти</a></li>
+        </ul>
+    </nav>
+</header>
+
+<!-- 🔹 Головний блок з привітанням -->
+<main class="hero">
+    <h1>Ласкаво просимо у Fashion Trends!</h1>
+    <p>Слідкуй за останніми модними трендами разом із нами.</p>
+    <a href="articles.html" class="btn">Дізнатися більше</a>
+</main>
+
+<!-- 🔹 Футер -->
+<footer>
+    <p>&copy; 2025 Fashion Trends. Усі права захищені.</p>
+</footer>
 
 </body>
 </html>
