Оновлено всі HTML-сторінки: додані стилі, виправлено шляхи зображень у галереї, оновлено дизайн контактів і статей

--- a/public/html/about.html
+++ b/public/html/about.html
@@ -1,10 +1,47 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Про нас - Fashion Trends</title>
+    <link rel="stylesheet" href="../../css/style.css">
 </head>
 <body>
+
+<header>
+    <div class="logo">Fashion Trends</div>
+    <nav>
+        <ul class="nav-links">
+            <li><a href="index.html">Головна</a></li>
+            <li><a href="about.html">Про нас</a></li>
+            <li><a href="articles.html">Статті</a></li>
+            <li><a href="gallery.html">Галерея</a></li>
+            <li><a href="contact.html">Контакти</a></li>
+        </ul>
+    </nav>
+</header>
+
+<main class="about">
+    <h1>Про нас</h1>
+    <p>
+        <strong>Fashion Trends</strong> — це ваш надійний путівник у світі моди.
+        Ми команда ентузіастів, які уважно слідкують за останніми модними тенденціями,
+        аналізують модні покази та діляться з вами найкращими лайфхаками для стильного вигляду.
+    </p>
+    <p>
+        Наш сайт покликаний допомогти вам знайти свій унікальний стиль, експериментувати з образами
+        та відчувати себе впевнено у будь-якій ситуації. Ми пишемо про найпопулярніші тренди, розповідаємо
+        про ікон стилю та розглядаємо найкращі дизайнерські рішення у світі моди.
+    </p>
+    <p>
+        Незалежно від того, чи ви шукаєте поради щодо поєднання кольорів, рекомендації про аксесуари
+        чи огляди нових колекцій — у нас ви знайдете все необхідне, щоб виглядати сучасно та елегантно.
+    </p>
+</main>
+
+<footer>
+    <p>&copy; 2025 Fashion Trends. Усі права захищені.</p>
+</footer>
 
 </body>
 </html>
