--- a/public/html/articles.html
+++ b/public/html/articles.html
@@ -1,10 +1,47 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Fashion Trends - Статті</title>
+    <link rel="stylesheet" href="../../css/style.css">
 </head>
 <body>
+
+<!-- 🔹 Шапка сайту -->
+<header>
+    <div class="logo">Fashion Trends</div>
+    <nav>
+        <ul class="nav-links">
+            <li><a href="index.html">Головна</a></li>
+            <li><a href="about.html">Про нас</a></li>
+            <li><a href="articles.html">Статті</a></li>
+            <li><a href="gallery.html">Галерея</a></li>
+            <li><a href="contact.html">Контакти</a></li>
+        </ul>
+    </nav>
+</header>
+
+<!-- 🔹 Секція статей -->
+<main class="articles">
+    <h1>Наші статті</h1>
+
+    <div class="article">
+        <h2>Весняні тренди 2025</h2>
+        <p>Дізнайтеся, які кольори та фасони будуть у тренді цього року.</p>
+    </div>
+
+    <div class="article">
+        <h2>Як поєднувати аксесуари?</h2>
+        <p>Поради щодо комбінування кольорів та матеріалів у вашому образі.</p>
+    </div>
+
+</main>
+
+<!-- 🔹 Футер -->
+<footer>
+    <p>&copy; 2025 Fashion Trends. Усі права захищені.</p>
+</footer>
 
 </body>
 </html>
