--- a/public/html/contact.html
+++ b/public/html/contact.html
@@ -1,10 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Fashion Trends - Контакти</title>
+    <link rel="stylesheet" href="../../css/style.css">
 </head>
 <body>
+
+<!-- 🔹 Шапка сайту -->
+<header>
+    <div class="logo">Fashion Trends</div>
+    <nav>
+        <ul class="nav-links">
+            <li><a href="index.html">Головна</a></li>
+            <li><a href="about.html">Про нас</a></li>
+            <li><a href="articles.html">Статті</a></li>
+            <li><a href="gallery.html">Галерея</a></li>
+            <li><a href="contact.html">Контакти</a></li>
+        </ul>
+    </nav>
+</header>
+
+<!-- 🔹 Контактна форма -->
+<main class="contact">
+    <h1>Зв'яжіться з нами</h1>
+    <p>Якщо у вас є питання або пропозиції, залиште нам повідомлення!</p>
+    <form>
+        <input type="text" placeholder="Ваше ім'я" required>
+        <input type="email" placeholder="Ваш Email" required>
+        <textarea placeholder="Ваше повідомлення" rows="5" required></textarea>
+        <button type="submit">Відправити</button>
+    </form>
+</main>
+
+<!-- 🔹 Футер -->
+<footer>
+    <p>&copy; 2025 Fashion Trends. Усі права захищені.</p>
+</footer>
 
 </body>
 </html>
