--- a/public/html/gallery.html
+++ b/public/html/gallery.html
@@ -1,10 +1,44 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Fashion Trends - Галерея</title>
+    <link rel="stylesheet" href="../../css/style.css">
 </head>
 <body>
+
+<!-- 🔹 Шапка сайту -->
+<header>
+    <div class="logo">Fashion Trends</div>
+    <nav>
+        <ul class="nav-links">
+            <li><a href="index.html">Головна</a></li>
+            <li><a href="about.html">Про нас</a></li>
+            <li><a href="articles.html">Статті</a></li>
+            <li><a href="gallery.html">Галерея</a></li>
+            <li><a href="contact.html">Контакти</a></li>
+        </ul>
+    </nav>
+</header>
+
+<!-- 🔹 Галерея -->
+<main class="gallery">
+    <h1>Галерея моди</h1>
+    <div class="gallery-container">
+        <img src="../images/fashion-runways.jpg" alt="Модний показ">
+        <img src="../images/We Heart It.jpg" alt="Стильний образ">
+        <img src="../images/Elegant Attitude.jpg" alt="Елегантний стиль">
+        <img src="../images/Elegant Attitude-2.jpg" alt="Елегантний стиль 2">
+        <img src="../images/johnny kavanagh.jpg" alt="Дизайнерський стиль">
+        <img src="../images/night out in paris.jpg" alt="Ніч в Парижі">
+        <img src="../images/Костюм с укороченным пиджаком.jpg" alt="Костюм із піджаком">
+    </div>
+</main>
+<!-- 🔹 Футер -->
+<footer>
+    <p>&copy; 2025 Fashion Trends. Усі права захищені.</p>
+</footer>
 
 </body>
 </html>
