Оновлено зображеня у галереї, оновлено дизайн статей, добавлена інфо для статей

--- a/public/html/articles.html
+++ b/public/html/articles.html
@@ -28,12 +28,33 @@
 
     <div class="article">
         <h2>Весняні тренди 2025</h2>
-        <p>Дізнайтеся, які кольори та фасони будуть у тренді цього року.</p>
+        <p>Цієї весни модний світ зосереджується на природних відтінках, легких тканинах і мінімалізмі. У центрі уваги – зручний і стильний одяг, що поєднує класику та сучасність.</p>
+        <p>У тренді пастельні кольори, особливо пудровий рожевий, м'ятний та лавандовий. Вільні силуети з акцентом на талію залишаються актуальними. Також популярні елементи мережива, легкі тканини та мінімалістичний дизайн.</p>
+        <img class="article-image" src="../images/1l (3).jpg" alt="Весняні тренди 2025">
+        <img class="article-image" src="../images/1l (5).jpg" alt="Весняні тренди 2025">
+
     </div>
 
     <div class="article">
         <h2>Як поєднувати аксесуари?</h2>
-        <p>Поради щодо комбінування кольорів та матеріалів у вашому образі.</p>
+        <p>Аксесуари є важливим елементом стильного образу. Вони допомагають зробити будь-який лук більш виразним і додати йому індивідуальності.</p>
+        <p>Основне правило — поєднувати відтінки та стилі. Наприклад, класичний одяг чудово виглядає з мінімалістичними прикрасами, а повсякденний стиль можна доповнити яскравими деталями, такими як великі сережки або масивні браслети.</p>
+        <img class="article-image" src="../images/We Heart It.jpg" alt="Поєднання аксесуарів">
+    </div>
+
+    <div class="article">
+        <h2>Найпопулярніші стилі цього сезону</h2>
+        <p>Цього року на вулицях міст можна побачити безліч стилістичних експериментів. Основний тренд — поєднання класичних речей з кежуал та спортивними елементами.</p>
+        <p>Зокрема, популярні костюми oversize, мінімалістичний монохром, а також спортивні костюми з елегантним взуттям.</p>
+        <img class="article-image" src="../images/johnny kavanagh.jpg" alt="Чоловічий стиль">
+        <img class="article-image" src="../images/Unknown-2.jpg" alt="Модний лук">
+    </div>
+
+    <div class="article">
+        <h2>Стрітстайл: що носитимуть у 2025 році?</h2>
+        <p>У стрітстайлі головну роль відіграють комфорт та унікальність. Оверсайз, багатошаровість, нестандартні поєднання кольорів і текстур – це головні акценти нового сезону.</p>
+        <p>Варто звернути увагу на поєднання спортивних та класичних елементів: наприклад, худі з класичними брюками або строгий піджак із кросівками. Також в тренді натуральні тканини та екологічні матеріали.</p>
+        <img class="article-image" src="../images/TM Limited Мужская одежда.jpg" alt="Стрітстайл тренди">
     </div>
 
 </main>
