--- a/public/html/gallery.html
+++ b/public/html/gallery.html
@@ -26,13 +26,27 @@
 <main class="gallery">
     <h1>Галерея моди</h1>
     <div class="gallery-container">
-        <img src="../images/fashion-runways.jpg" alt="Модний показ">
         <img src="../images/We Heart It.jpg" alt="Стильний образ">
         <img src="../images/Elegant Attitude.jpg" alt="Елегантний стиль">
         <img src="../images/Elegant Attitude-2.jpg" alt="Елегантний стиль 2">
         <img src="../images/johnny kavanagh.jpg" alt="Дизайнерський стиль">
         <img src="../images/night out in paris.jpg" alt="Ніч в Парижі">
+        <img src="../images/fashion-runways.jpg" alt="Модний показ">
         <img src="../images/Костюм с укороченным пиджаком.jpg" alt="Костюм із піджаком">
+        <img src="../images/Unknown.jpg" alt="Модний показ">
+        <img src="../images/solo.jpg" alt="Модний показ">
+        <img src="../images/ven.jpg" alt="Модний показ">
+        <img src="../images/Unknown-3.jpg" alt="Модний показ">
+        <img src="../images/you.jpg" alt="Модний показ">
+        <img src="../images/SLO.jpg" alt="Модний показ">
+        <img src="../images/lolisto.jpg" alt="Модний показ">
+        <img src="../images/1l (2).jpg" alt="Модний показ">
+        <img src="../images/1l (3).jpg" alt="Модний показ">
+        <img src="../images/1l (4).jpg" alt="Модний показ">
+        <img src="../images/1l (5).jpg" alt="Модний показ">
+        <img src="../images/1l (6).jpg" alt="Модний показ">
+        <img src="../images/1l (8).jpg" alt="Модний показ">
+
     </div>
 </main>
 <!-- 🔹 Футер -->
