--- a/public/html/articles.html
+++ b/public/html/articles.html
@@ -61,7 +61,7 @@
 
 <!-- 🔹 Футер -->
 <footer>
-    <p>&copy; 2025 Fashion Trends. Усі права захищені.</p>
+    <p>Fashion Trends</p>
 </footer>
 
 </body>
