--- a/public/html/gallery.html
+++ b/public/html/gallery.html
@@ -51,7 +51,7 @@
 </main>
 <!-- 🔹 Футер -->
 <footer>
-    <p>&copy; 2025 Fashion Trends. Усі права захищені.</p>
+    <p>Fashion Trends</p>
 </footer>
 
 </body>
