--- a/public/html/index.html
+++ b/public/html/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fashion Trends - Головна</title>
-    <link rel="stylesheet" href="../../css/style.css"> <!-- Оновлений правильний шлях до CSS -->
+    <link rel="stylesheet" href="../../css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -32,7 +32,7 @@
 
 <!-- 🔹 Футер -->
 <footer>
-    <p>&copy; 2025 Fashion Trends. Усі права захищені.</p>
+    <p>Fashion Trends</p>
 </footer>
 
 </body>
