--- a/public/html/about.html
+++ b/public/html/about.html
@@ -8,8 +8,14 @@
 </head>
 <body>
 
+<!-- 🔹 Шапка сайту -->
 <header>
     <div class="logo">Fashion Trends</div>
+    <div class="burger-menu">
+        <div></div>
+        <div></div>
+        <div></div>
+    </div>
     <nav>
         <ul class="nav-links">
             <li><a href="index.html">Головна</a></li>
@@ -21,6 +27,7 @@
     </nav>
 </header>
 
+<!-- 🔹 Основний контент -->
 <main class="about">
     <h1>Про нас</h1>
     <p>
@@ -39,9 +46,13 @@
     </p>
 </main>
 
+<!-- 🔹 Футер -->
 <footer>
     <p>Fashion Trends</p>
 </footer>
+
+<!-- 🔹 Підключення JS -->
+<script src="../../js/script.js"></script>
 
 </body>
 </html>
