--- a/public/html/articles.html
+++ b/public/html/articles.html
@@ -11,6 +11,11 @@
 <!-- 🔹 Шапка сайту -->
 <header>
     <div class="logo">Fashion Trends</div>
+    <div class="burger-menu">
+        <div></div>
+        <div></div>
+        <div></div>
+    </div>
     <nav>
         <ul class="nav-links">
             <li><a href="index.html">Головна</a></li>
@@ -63,6 +68,8 @@
 <footer>
     <p>Fashion Trends</p>
 </footer>
+<!-- 🔹 Підключення JS -->
+<script src="../../js/script.js"></script>
 
 </body>
 </html>
